@@ -10,6 +10,7 @@ import lombok.Setter;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -26,7 +27,7 @@ public class RecipeDetailResponseDTO {
     private Integer timeMinutes;
 
     // 태그된 식재료 정보
-    private List<String> ingredientTags;
+    private List<String> ingredientTagNames;
     private Map<String, String> ingredients;
     private Map<String, String> seasoning;
 
@@ -41,30 +42,7 @@ public class RecipeDetailResponseDTO {
     private LocalDateTime updatedAt;
 
     // 알러지 정보
-    private Boolean allergy_알류;
-    private Boolean allergy_우유;
-    private Boolean allergy_각류;
-    private Boolean allergy_밀류;
-    private Boolean allergy_유제품;
-    private Boolean allergy_메밀;
-    private Boolean allergy_땅콩;
-    private Boolean allergy_대두;
-    private Boolean allergy_밀;
-    private Boolean allergy_고등어;
-    private Boolean allergy_돼지고기;
-    private Boolean allergy_복숭아;
-    private Boolean allergy_토마토;
-    private Boolean allergy_아황산류;
-    private Boolean allergy_호두;
-    private Boolean allergy_닭고기;
-    private Boolean allergy_쇠고기;
-    private Boolean allergy_오징어;
-    private Boolean allergy_조개류;
-    private Boolean allergy_굴;
-    private Boolean allergy_전복;
-    private Boolean allergy_홍합;
-    private Boolean allergy_잣;
-
+    private List<String> allergies;
 
     // 댓글 리스트
     private List<RecipeCommentResponseDTO> comments;
@@ -82,9 +60,9 @@ public class RecipeDetailResponseDTO {
         this.timeMinutes = recipe.getTimeMinutes();
 
         // 식재료 태그
-        this.ingredientTags = recipe.getIngredientTags().stream()
+        this.ingredientTagNames = recipe.getIngredientTags().stream()
                 .map(tag -> tag.getIngredient().getName())
-                .toList();
+                .collect(Collectors.toList());
 
         this.ingredients = recipe.getIngredients();
         this.seasoning = recipe.getSeasoning();
@@ -101,29 +79,30 @@ public class RecipeDetailResponseDTO {
         this.updatedAt = recipe.getUpdatedAt();
 
         // 알러지 정보
-        this.allergy_알류 = recipe.getAllergy_알류();
-        this.allergy_우유 = recipe.getAllergy_우유();
-        this.allergy_각류 = recipe.getAllergy_각류();
-        this.allergy_밀류 = recipe.getAllergy_밀류();
-        this.allergy_유제품 = recipe.getAllergy_유제품();
-        this.allergy_메밀 = recipe.getAllergy_메밀();
-        this.allergy_땅콩 = recipe.getAllergy_땅콩();
-        this.allergy_대두 = recipe.getAllergy_대두();
-        this.allergy_밀 = recipe.getAllergy_밀();
-        this.allergy_고등어 = recipe.getAllergy_고등어();
-        this.allergy_돼지고기 = recipe.getAllergy_돼지고기();
-        this.allergy_복숭아 = recipe.getAllergy_복숭아();
-        this.allergy_토마토 = recipe.getAllergy_토마토();
-        this.allergy_아황산류 = recipe.getAllergy_아황산류();
-        this.allergy_호두 = recipe.getAllergy_호두();
-        this.allergy_닭고기 = recipe.getAllergy_닭고기();
-        this.allergy_쇠고기 = recipe.getAllergy_쇠고기();
-        this.allergy_오징어 = recipe.getAllergy_오징어();
-        this.allergy_조개류 = recipe.getAllergy_조개류();
-        this.allergy_굴 = recipe.getAllergy_굴();
-        this.allergy_전복 = recipe.getAllergy_전복();
-        this.allergy_홍합 = recipe.getAllergy_홍합();
-        this.allergy_잣 = recipe.getAllergy_잣();
+        this.allergies = new java.util.ArrayList<>();
+        if (Boolean.TRUE.equals(recipe.getAllergy_알류())) allergies.add("알류");
+        if (Boolean.TRUE.equals(recipe.getAllergy_우유())) allergies.add("우유");
+        if (Boolean.TRUE.equals(recipe.getAllergy_각류())) allergies.add("각류");
+        if (Boolean.TRUE.equals(recipe.getAllergy_밀류())) allergies.add("밀류");
+        if (Boolean.TRUE.equals(recipe.getAllergy_유제품())) allergies.add("유제품");
+        if (Boolean.TRUE.equals(recipe.getAllergy_메밀())) allergies.add("메밀");
+        if (Boolean.TRUE.equals(recipe.getAllergy_땅콩())) allergies.add("땅콩");
+        if (Boolean.TRUE.equals(recipe.getAllergy_대두())) allergies.add("대두");
+        if (Boolean.TRUE.equals(recipe.getAllergy_밀())) allergies.add("밀");
+        if (Boolean.TRUE.equals(recipe.getAllergy_고등어())) allergies.add("고등어");
+        if (Boolean.TRUE.equals(recipe.getAllergy_돼지고기())) allergies.add("돼지고기");
+        if (Boolean.TRUE.equals(recipe.getAllergy_복숭아())) allergies.add("복숭아");
+        if (Boolean.TRUE.equals(recipe.getAllergy_토마토())) allergies.add("토마토");
+        if (Boolean.TRUE.equals(recipe.getAllergy_아황산류())) allergies.add("아황산류");
+        if (Boolean.TRUE.equals(recipe.getAllergy_호두())) allergies.add("호두");
+        if (Boolean.TRUE.equals(recipe.getAllergy_닭고기())) allergies.add("닭고기");
+        if (Boolean.TRUE.equals(recipe.getAllergy_쇠고기())) allergies.add("쇠고기");
+        if (Boolean.TRUE.equals(recipe.getAllergy_오징어())) allergies.add("오징어");
+        if (Boolean.TRUE.equals(recipe.getAllergy_조개류())) allergies.add("조개류");
+        if (Boolean.TRUE.equals(recipe.getAllergy_굴())) allergies.add("굴");
+        if (Boolean.TRUE.equals(recipe.getAllergy_전복())) allergies.add("전복");
+        if (Boolean.TRUE.equals(recipe.getAllergy_홍합())) allergies.add("홍합");
+        if (Boolean.TRUE.equals(recipe.getAllergy_잣())) allergies.add("잣");
 
         this.comments = comments;
     }
